--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
