--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
     "sweetalert2": "^11.10.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
