--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "lodash": "^4.17.21",
