--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
-    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "sass": "^1.79.5",
     "sweetalert2": "^11.10.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
