--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^22.9.0",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
@@ -36,12 +36,13 @@
     "sweetalert2": "^11.10.8",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -65,8 +66,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.4",
-    "@vitejs/plugin-react": "^4.3.3",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.11"
+    "tailwindcss": "^3.4.15"
   }
 }
